--- a/api_basic/templates/base_generic.html
+++ b/api_basic/templates/base_generic.html
@@ -20,6 +20,7 @@
             <p class="col-8">Scheduler for Case Students</p>
             <hr class="mt-0 mb-4">
             {% block content %}
+            Content here
             {% endblock %}
         </div>
     </div>
@@ -28,5 +29,11 @@
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+<!--jQuery -->
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.blockUI/2.70/jquery.blockUI.min.js" type="text/javascript"></script>
+<script src="{% static 'js/ICYNI.js' %}" type="text/javascript"></script>
+
+
 </body>
 </html>
