--- a/api_basic/templates/homePage.html
+++ b/api_basic/templates/homePage.html
@@ -4,9 +4,8 @@
 {% block content %}
     <div class = "actions">
         <ul class = "addSth">
-            <li><a href="{% url 'coursePage' %}">Add A Course</a></li>
+            <li><a href="{% url 'courseDetail' %}">Add A Course</a></li>
             <li><a href="{% url 'breakPage' %}">Add A Break</a></li>
-            <li><a href="{% url 'courseDetail' %}">Course List</a></li>
         </ul>
     </div>
 {% endblock %}
