1. Move the content to the left so that users don't need to scroll when viewing the courses' information.
2. Change the "Press" button to "Search".

--- a/api_basic/templates/courseDetail.html
+++ b/api_basic/templates/courseDetail.html
@@ -6,7 +6,7 @@
 {% load url_extra %}
 <form method="get">
   {{filtered_courses.form.as_p}}
-  <input type="submit" value="Press">
+  <input type="submit" value="Search">
 </form>
 
 <table id="course-list" class="table table-boarded" style="width:100%">
