--- a/api_basic/templates/homePage.html
+++ b/api_basic/templates/homePage.html
@@ -6,6 +6,7 @@
         <ul class = "addSth">
             <li><a href="{% url 'courseDetail' %}">Add A Course</a></li>
             <li><a href="{% url 'breakPage' %}">Add A Break</a></li>
+            <li><a href="{% url 'shoppingCart' %}">Shopping Cart</a></li>
         </ul>
     </div>
 {% endblock %}
