--- a/api_basic/templates/courseDetail.html
+++ b/api_basic/templates/courseDetail.html
@@ -9,9 +9,12 @@
   <input type="submit" value="Search">
 </form>
 
+<form method="POST">
+{% csrf_token %}
 <table id="course-list" class="table table-boarded" style="width:100%">
   <thead>
     <tr>
+      <th></th>
       <th>Subject</th>
       <th>Catalog Number</th>
       <th>Title</th>
@@ -29,6 +32,7 @@
   <tbody>
     {% for course in course_page_obj %}
       <tr>
+        <td><input class="uk-checkbox " type="checkbox" name="checked_selection" value={{course.course_id}}></td> 
         <td>{{course.subject}}</td>
         <td>{{course.catalog_number}}</td>
         <td>{{course.course_title}}</td>
@@ -45,6 +49,8 @@
     {% endfor %}
   </tbody>
 </table>
+<input type="submit" value="save course"/>
+</form>
 
 {% if course_page_obj.has_other_pages %}
   {% load proper_paginate %}
