--- a/api_basic/templates/shoppingCart.html
+++ b/api_basic/templates/shoppingCart.html
@@ -2,7 +2,8 @@
 {% block content %}
   <p>This is the shopping cart page.</p>
 
-
+  <form method="POST">
+  {% csrf_token %}
   <table id="course-list" class="table table-boarded" style="width:100%">
   <thead>
     <tr>
@@ -41,4 +42,7 @@
     {% endfor %}
   </tbody>
 </table>
+<input type="submit" value="Delete course"/>
+</form>
+
 {% endblock %}
