--- a/api_basic/templates/shoppingCart.html
+++ b/api_basic/templates/shoppingCart.html
@@ -42,7 +42,9 @@
     {% endfor %}
   </tbody>
 </table>
-<input type="submit" value="Delete course"/>
+
+<button class="btn btn-outline-primary" type="submit" name='create_schedule'><i class="bi bi-bag-check-fill"></i> Create schedule</Button>
+<button class="btn btn-outline-danger" type="submit" name='delete_course'><i class="bi bi-trash-fill"></i> Delete course</Button>
 </form>
 
 {% endblock %}
