--- a/api_basic/templates/breakPage.html
+++ b/api_basic/templates/breakPage.html
@@ -1,11 +1,22 @@
 {% extends "base_generic.html" %}
 {% block content %}
     <p>Add a break to specify when you do not want to take classes.</p>
-    <form method = "GET">
-        {{ add_time_form }}
+    <head>
+    <script>
+        {% if messages %}
+            {% for message in messages %}
+                alert('{{ message }}')
+            {% endfor %}
+        {% endif %}
+    </script>
+    </head>
+    <form method = "post">
+        {% csrf_token %}
+            {{ add_time_form }}
         <div></div>
         {{ weekday_form }}
         <div></div>
         <input type = "submit" value = "Submit">
     </form>
 {% endblock %}
+
